--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<div id="app">
+			<app-navbar></app-navbar>
 			<router-view></router-view>
 		</div>
 		<script src="/dist/build.js"></script>
